Reading Mempool and able to copy transaction

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-MOONBEAM_RPC_URL='https://rpc.ankr.com/moonbeam'
+MOONBEAM_RPC_URL='https://rpc.api.moonbeam.network'
 PRIVATE_KEY='abcdefg'
 MOONSCAN_API_KEY='123ABC123ABC123ABC123ABC123ABC123A'
 COINMARKETCAP_API_KEY='YOUR_KEY'
