--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.6.5",
     "chai": "^4.3.6",
+    "chalk": "4.1.2",
     "dotenv": "^16.0.1",
     "ethers": "^5.6.9",
     "hardhat": "^2.10.1",
