Changed over to using mnemonic, added  target conf

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-MOONBEAM_RPC_URL='https://rpc.api.moonbeam.network'
-PRIVATE_KEY='abcdefg'
+MOONBEAM_RPC_URL='http://127.0.0.1:9933'
+MOONBEAM_WS_URL='ws://127.0.0.1:9944'
+MNEMONIC='your mnemonic'
 MOONSCAN_API_KEY='123ABC123ABC123ABC123ABC123ABC123A'
 COINMARKETCAP_API_KEY='YOUR_KEY'
 REPORT_GAS=false
