feat: migrated to hardhat-toolbox and yarn 3

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,18 @@
+# Provider Information
 MOONBEAM_RPC_URL='http://127.0.0.1:9933'
 MOONBEAM_WS_URL='ws://127.0.0.1:9944'
-MNEMONIC='your mnemonic'
-MOONSCAN_API_KEY='123ABC123ABC123ABC123ABC123ABC123A'
+INFURA_API_KEY="zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz"
+MNEMONIC="here is where your twelve words mnemonic should be put my friend"
+
+# Block explorer API keys
+ARBISCAN_API_KEY="zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz"
+BSCSCAN_API_KEY="zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz"
+ETHERSCAN_API_KEY="zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz"
+MOONSCAN_API_KEY="zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz"
+OPTIMISM_API_KEY="zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz"
+POLYGONSCAN_API_KEY="zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz"
+SNOWTRACE_API_KEY="zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz"
+
+# Gas Reporting'
 COINMARKETCAP_API_KEY='YOUR_KEY'
 REPORT_GAS=false
