--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
 # vscode
 .vscode
 
+# yarn 
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 # hardhat
 artifacts
 cache
