--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "ts-generator": "^0.1.1",
     "ts-node": "^10.9.1",
     "typechain": "^8.1.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "winston": "^3.8.1"
   },
   "files": [
     "/contracts"
