--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,14 +7,14 @@
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "lib": ["es6"],
-    "module": "commonjs",
+    "module": "CommonJS",
     "moduleResolution": "node",
     "noImplicitAny": true,
     "removeComments": true,
     "resolveJsonModule": true,
     "sourceMap": true,
     "strict": true,
-    "target": "es2020"
+    "target": "es6"
   },
   "exclude": ["node_modules"],
   "files": ["./hardhat.config.ts", "./helper-hardhat-config.ts"],
