--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "chalk": "4.1.2",
     "commitizen": "^4.2.5",
     "cross-env": "^7.0.3",
+    "custom-uniswap-v2-sdk": "^3.2.0",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^16.0.1",
     "eslint": "^8.21.0",
@@ -55,7 +56,8 @@
     "ts-node": "^10.9.1",
     "typechain": "^8.1.0",
     "typescript": "^4.7.4",
-    "winston": "^3.8.1"
+    "winston": "^3.8.1",
+    "yesno": "^0.4.0"
   },
   "files": [
     "/contracts"
