--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
     "ethers": "^5.6.9",
+    "evm": "^0.2.0",
     "fs-extra": "^10.1.0",
     "hardhat": "^2.10.1",
     "hardhat-deploy": "^0.11.12",
