feat: updated all dependencies

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.4",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.6",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@0.3.0-beta.13",
+    "@nomiclabs/hardhat-ethers": "^2.2.1",
     "@nomiclabs/hardhat-etherscan": "^3.1.2",
     "@openzeppelin/contracts": "^4.8.0",
     "@trivago/prettier-plugin-sort-imports": "^3.4.0",
@@ -22,12 +22,11 @@
     "@typechain/hardhat": "^6.1.4",
     "@types/chai": "^4.3.4",
     "@types/fs-extra": "^9.0.13",
-    "@types/mocha": "^10.0.0",
+    "@types/mocha": "9.1.1",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
     "chai": "^4.3.7",
-    "chalk": "4.1.2",
     "commitizen": "^4.2.5",
     "cross-env": "^7.0.3",
     "custom-uniswap-v2-sdk": "^3.2.0",
@@ -40,7 +39,6 @@
     "fs-extra": "^10.1.0",
     "hardhat": "^2.12.2",
     "hardhat-deploy": "^0.11.20",
-    "hardhat-deploy-ethers": "^0.3.0-beta.13",
     "hardhat-gas-reporter": "^1.0.9",
     "husky": "^8.0.2",
     "lint-staged": "^13.0.3",
