--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@ethersproject/bignumber": "^5.7.0",
     "@ethersproject/bytes": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
+    "@matterlabs/hardhat-zksync-deploy": "^0.5.2",
+    "@matterlabs/hardhat-zksync-solc": "^0.3.11-beta.1",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.4",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.6",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
@@ -56,8 +58,10 @@
     "ts-node": "^10.9.1",
     "typechain": "^8.1.1",
     "typescript": "^4.8.4",
+    "web3": "^1.8.1",
     "winston": "^3.8.2",
-    "yesno": "^0.4.0"
+    "yesno": "^0.4.0",
+    "zksync-web3": "^0.11.1"
   },
   "files": [
     "/contracts"
@@ -78,21 +82,29 @@
     "access": "public"
   },
   "scripts": {
-    "clean": "shx rm -rf ./artifacts ./cache ./coverage ./src/types ./coverage.json && yarn typechain",
-    "commit": "git-cz",
-    "compile": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat compile",
-    "coverage": "hardhat coverage --solcoverjs ./.solcover.js --temp artifacts --testfiles \"test/**/*.ts\" && yarn typechain",
-    "deploy": "hardhat deploy:Greeter",
-    "lint": "yarn lint:sol && yarn lint:ts && yarn prettier:check",
-    "lint:sol": "solhint --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
-    "lint:ts": "eslint --config ./.eslintrc.yml --ignore-path ./.eslintignore --ext .js,.ts .",
-    "postinstall": "husky install && DOTENV_CONFIG_PATH=./.env.example yarn typechain",
-    "postpublish": "pinst --enable",
-    "prepublishOnly": "pinst --disable",
-    "prettier": "prettier --config ./.prettierrc.yml --write \"**/*.{js,json,md,sol,ts,yml}\"",
-    "prettier:check": "prettier --check --config ./.prettierrc.yml \"**/*.{js,json,md,sol,ts,yml}\"",
-    "tasks": "hardhat tasks",
-    "test": "hardhat test",
-    "typechain": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat typechain"
+    "prepare": "node ./.setup.js && hardhat typechain",
+    "lint": "eslint \"**/*.{js,ts}\" && solhint src/**/*.sol",
+    "lint:fix": "eslint --fix \"**/*.{js,ts}\" && solhint --fix src/**/*.sol",
+    "format": "prettier --check \"**/*.{ts,js,sol}\"",
+    "format:fix": "prettier --write \"**/*.{ts,js,sol}\"",
+    "compile": "hardhat compile",
+    "void:deploy": "hardhat deploy --report-gas",
+    "test": "cross-env HARDHAT_DEPLOY_FIXTURE=true HARDHAT_COMPILE=true mocha --bail --recursive test",
+    "gas": "cross-env REPORT_GAS=true hardhat test",
+    "coverage": "cross-env HARDHAT_DEPLOY_FIXTURE=true hardhat coverage",
+    "dev:node": "cross-env MINING_INTERVAL=\"3000,5000\" hardhat node --hostname 0.0.0.0",
+    "dev": "cross-env MINING_INTERVAL=\"3000,5000\" hardhat node --hostname 0.0.0.0 --watch",
+    "local:dev": "hardhat --network localhost deploy --watch",
+    "execute": "node ./_scripts.js run",
+    "deploy": "node ./_scripts.js deploy",
+    "verify": "node ./_scripts.js verify",
+    "export": "node ./_scripts.js export",
+    "hardhat": "hardhat",
+    "fork:execute": "node ./_scripts.js fork:run",
+    "fork:deploy": "node ./_scripts.js fork:deploy",
+    "fork:dev": "node ./_scripts.js fork:dev",
+    "fork:node": "node ./_scripts.js fork:node",
+    "fork:test": "node ./_scripts.js fork:test",
+    "tenderly:push": "node ./_scripts.js tenderly:push"
   }
 }
